--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Bootstrap -->
+    <script src="./scr/site-components/commmon/assets/js/lib/bootstrap.bundle.min.js"></script>
+
+    <!-- Ionicons -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
+    <!-- Splide (Slider Plugin) -->
+    <script src="./scr/site-components/commmon/assets/js/plugins/splide/splide.min.js"></script>
+
+    <!-- Custom JS Files -->
+    <script src="./scr/site-components/commmon/assets/js/function.js"></script>
+    <script src="./scr/site-components/commmon/assets/js/sinkora-main.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
