--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <script src="./scr/site-components/commmon/assets/js/function.js"></script>
     <script src="./scr/site-components/commmon/assets/js/sinkora-main.js"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/css/ionicons.min.css">
+<script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
